--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,17 @@ nav {
   width: 100%;
 }
 
-.idiom {
+.row>div {
   flex-grow: 1;
+  margin: 0 2px;
+  border-radius: 8px;
+  border: 1px solid darkblue;
+}
+
+.idiom {
   margin: 2px;
   padding: 1rem;
-  border-radius: 8px;
-  border: 1px solid silver;
+  border: 1px solid silver !important;
 }
 
 .idiom:nth-child(1) {
@@ -33,4 +38,8 @@ nav {
 
 .idiom:nth-child(2) {
   width: 60%;
+}
+
+#countrySelect {
+  width: 8rem;
 }
