--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ nav {
   flex-grow: 1;
   margin: 0 2px;
   border-radius: 8px;
-  border: 1px solid darkblue;
+  border: 1px solid silver;
 }
 
 .idiom {
