--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,22 @@ nav {
   border: 1px solid silver;
 }
 
+.control:nth-child(1) {
+  width: 34%;
+}
+
+.control:nth-child(2) {
+  width: 6%;
+}
+
+.control:nth-child(3) {
+  width: 40%;
+}
+
+.control:nth-child(4) {
+  width: 15%;
+}
+
 .idiom {
   margin: 2px;
   padding: 1rem;
@@ -37,8 +53,4 @@ nav {
 
 .idiom:nth-child(2) {
   width: 60%;
-}
-
-#countrySelect {
-  width: 8rem;
 }
