--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
   font-family: "Roboto", "Cantarell", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: #212121;
 }
 
 main, nav {
@@ -21,17 +23,21 @@ nav {
 
 .row>div {
   flex-grow: 1;
-  margin: 0 2px;
-  border-radius: 8px;
-  border: 1px solid silver;
+  margin: 0;
+  border: 1px dashed #888;
+}
+
+.control {
+  border: none !important;
 }
 
 .control:nth-child(1) {
-  width: 34%;
+  width: 35%;
 }
 
 .control:nth-child(2) {
-  width: 6%;
+  text-align: center;
+  width: 5%;
 }
 
 .control:nth-child(3) {
@@ -43,7 +49,6 @@ nav {
 }
 
 .idiom {
-  margin: 2px;
   padding: 1rem;
 }
 
