--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", "Cantarell", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   color: white;
   background-color: #212121;
+  /* background-color: #424242; */
 }
 
 main, nav {
