--- a/src/idioms.css
+++ b/src/idioms.css
@@ -10,23 +10,11 @@
 
 /* ========== PLOT ========== */
 
-.axis-x {
-  fill: black;
-  /* font-weight: bold; */
-  text-anchor: end;
-}
-
-.axis-y {
-  fill: black;
-  /* font-weight: bold; */
-  text-anchor: start;
-}
-
 .circles {
-  fill: white;
-  stroke: silver;
-  stroke-width: 0.8;
-  opacity: 0.7;
+  fill: orangered;
+  stroke: red;
+  stroke-width: 1;
+  opacity: 0.9;
 }
 
 .text {
