--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,14 @@ main, nav {
 
 nav {
   padding: 0.6rem 0;
+  height: 5vh;
+  user-select: none;
 }
 
 .row {
   display: flex;
   width: 100%;
+  height: 46vh;
 }
 
 .row>div {
@@ -36,7 +39,7 @@ nav {
 }
 
 .control:nth-child(2) {
-  width: 50%;
+  width: 60%;
   overflow: hidden;
 }
 
@@ -46,13 +49,20 @@ nav {
 }
 
 .idiom {
-  padding: 1rem;
+  box-sizing: border-box;
+  padding: 0.4rem;
+  height: 100%;
+}
+
+.idiom>div {
+  width: 100%;
+  height: 100%;
 }
 
 .idiom:nth-child(1) {
-  width: 40%;
+  width: 30%;
 }
 
 .idiom:nth-child(2) {
-  width: 60%;
+  width: 70%;
 }
