--- a/src/idioms.css
+++ b/src/idioms.css
@@ -11,8 +11,7 @@
 /* ========== PLOT ========== */
 
 .circles {
-  fill: orangered;
-  stroke: red;
+  fill: transparent;
   stroke-width: 1;
   opacity: 0.9;
 }
