--- a/src/index.css
+++ b/src/index.css
@@ -34,16 +34,21 @@ nav {
 }
 
 .control:nth-child(1) {
-  width: 40%;
+  width: 30%;
   padding-right: 1rem;
 }
 
 .control:nth-child(2) {
-  width: 60%;
-  overflow: hidden;
+  width: 15%;
+  padding-right: 1rem;
 }
 
 .control:nth-child(3) {
+  width: 45%;
+  overflow: hidden;
+}
+
+.control:nth-child(4) {
   text-align: center;
   width: 5%;
 }
