--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,16 @@ nav {
 .idiom:nth-child(2) {
   width: 70%;
 }
+
+#tooltip {
+  color: white;
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: rgba(0, 0, 0, .8);
+  border: 2px solid black;
+  pointer-events: none;
+}
